--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "express": "^4.17.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
+    "react-p5": "^1.4.1",
     "sqlite3": "^5.1.2",
     "superagent": "7.1.1",
     "ts-node": "^10.9.1"
